Disable bootstrap for UGS devices (sold in Canada)
Bug: 366072023
Change-Id: I0072d2a44bc7d5ba4c62b2410949e7378c457044
Test: m
Flag: EXEMPT disabling a feature

--- a/esim/init.esim-gs.rc
+++ b/esim/init.esim-gs.rc
@@ -2,6 +2,10 @@
 on property:ro.build.type=user && property:ro.boot.flash.locked=0
     setprop setupwizard.feature.provisioning_profile_mode false
 
+# Disable bootstrap for UGS devices
+on property:ro.boot.warranty.sku=UGS
+    setprop setupwizard.feature.provisioning_profile_mode false
+
 # Disable bootstrap for DVT devices shipping to non-US carriers
 on property:ro.boot.warranty.sku=BOF
     setprop setupwizard.feature.provisioning_profile_mode false
