Update irq_gia_google permission
Current permission 666 blocks bugreport use-case be able to
copy interrupt traces into bugreport. Provide required
permissions.

Bug: 376124648
Test: Captured bugreport and traces are visible in that.
Flag: EXEMPT, init rc change to modify permission
Change-Id: Ib03ab97fcd65d18e2420421f8fc997eefd55570f
Signed-off-by: Chintan Pandya <chintanpandya@google.com>

--- a/interrupts/init.interrupts.rc
+++ b/interrupts/init.interrupts.rc
@@ -1,7 +1,8 @@
 on init
-    # Create the directory for the trace instance during early init
-    chmod 666 /sys/kernel/tracing/instances/irq_gia_google
-    chmod 666 /sys/kernel/tracing/instances/irq_gia_google/trace
+    # With permissions 666, trace was not captured in the bugreport.
+    # Apply relaxed permissions.
+    chmod 777 /sys/kernel/tracing/instances/irq_gia_google
+    chmod 777 /sys/kernel/tracing/instances/irq_gia_google/trace
     chown system system /sys/kernel/tracing/instances/irq_gia_google
     chown system system /sys/kernel/tracing/instances/irq_gia_google/trace
 
