Disable redundant trace event for performance reasons
It's been found that every GIA trace events takes about
0.7 us. GIA driver throws 5 trace events for every IRQ
via GIA. Reducing some events would make IRQ handler
flow a but more optimized.

Bug: 380463996
Test: observed the trace and the disabled trace entries
      are not longer present, reducing pressure on runtime
      performance as well as memory pressure on trace buffer.
Flag: EXEMPT, optimize interrupt tracing.

Change-Id: I233d82da7a6eb75344afe3798c9f850a74e5e16b
Signed-off-by: Chintan Pandya <chintanpandya@google.com>

--- a/interrupts/init.interrupts.rc
+++ b/interrupts/init.interrupts.rc
@@ -15,3 +15,8 @@ on init
     # Having low size helps because this entire buffer gets dumped in bugreport.
     # Having a large size can impact bugreport size and time it takes to pack/unpack.
     write /sys/kernel/tracing/instances/irq_gia_google/buffer_size_kb 16
+
+    # Reduce some GIA events from interrupt handler
+    write /sys/kernel/tracing/instances/irq_gia_google/events/irq_gia/gia_get_power/enable 0
+    write /sys/kernel/tracing/instances/irq_gia_google/events/irq_gia/gia_put_power/enable 0
+    write /sys/kernel/tracing/instances/irq_gia_google/events/irq_gia/gia_irq_eoi/enable 0
