Mount rw to get restorecon_recursive working
Bug: 378120929
Test: Boot and check selabel in /data/vendor/intelligence
Flag: EXEMPT bugfix
Change-Id: I0d3d391629248f7014c28b5f74bb95b50626c99d
Signed-off-by: Jaegeuk Kim <jaegeuk@google.com>

--- a/storage/storage.intelligence.rc
+++ b/storage/storage.intelligence.rc
@@ -10,8 +10,9 @@ service storage_intelligence /vendor/bin/storage_intelligence.sh
 
 on boot && property:persist.vendor.intelligence=on
     mkdir /data/vendor/intelligence 0770 vendor_intelligence vendor_intelligence
+    mount f2fs loop@/dev/block/by-name/userdata_exp.ai /data/vendor/intelligence rw
     restorecon_recursive /data/vendor/intelligence
-    mount f2fs loop@/dev/block/by-name/userdata_exp.ai /data/vendor/intelligence ro
+    mount f2fs /data/vendor/intelligence /data/vendor/intelligence remount ro
     start storage_intelligence
 
 on boot && property:persist.vendor.intelligence=off
