gs-common: Update init scripts from BP2A
Change-Id: Ibb8d3715ec6cb9ebb5d89e116374d468dfcad826

--- a/camera/libg3a_gaf.rc
+++ b/camera/libg3a_gaf.rc
@@ -1,6 +1,6 @@
 # override default log levels.
 on boot
-    setprop log.tag.GAF E
+    setprop log.tag.GAF I
 
 # backward-compatible system props.
 on property:persist.vendor.camera.af.debug_level=0
